gexiv2_metadata_get_gps_longitude(): Fix leak

free return from gexiv2_metadata_get_exif_tag_string()

Fixes following AddressSanitizer issue:
Direct leak of 2 byte(s) in 1 object(s) allocated from:
    #0 0x7fb07c59437a in malloc (/usr/lib/x86_64-linux-gnu/libasan.so.2+0x9437a)
    #1 0x7fb079e87799 in g_malloc (/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x4f799)
    #2 0x7fb079ea012e in g_strdup (/lib/x86_64-linux-gnu/libglib-2.0.so.0+0x6812e)
    #3 0x7fb07d6377ce in gexiv2_metadata_get_exif_tag_string gexiv2/gexiv2-metadata-exif.cpp:113
    #4 0x7fb07d63a3c2 in gexiv2_metadata_get_gps_longitude gexiv2/gexiv2-metadata-gps.cpp:30
    #5 0x7fb07d63aeb8 in gexiv2_metadata_get_gps_info gexiv2/gexiv2-metadata-gps.cpp:186
    #6 0x4172a1 in a_geotag_get_position /home/lebedevri/src/viking/src/geotag_exif.c:218
    #7 0x4170b0 in main /home/lebedevri/src/viking/test/geotag_read.c:14
    #8 0x7fb076699b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44)
    #9 0x416fb8  (/home/lebedevri/src/viking/test/geotag_read+0x416fb8)

https://bugzilla.gnome.org/show_bug.cgi?id=754241